[Offline Pages] Add explicit DependsOn clause to request coordinator factory and delete a flaky test

BUG=679844

Review-Url: https://codereview.chromium.org/2635633002
Cr-Commit-Position: refs/heads/master@{#444285}