chrome/browser/android/offline_pages/request_coordinator_factory.cc
@@ -37,7 +37,9 @@ namespace offline_pages {
 RequestCoordinatorFactory::RequestCoordinatorFactory()
     : BrowserContextKeyedServiceFactory(
           "OfflineRequestCoordinator",
-          BrowserContextDependencyManager::GetInstance()) {}
+          BrowserContextDependencyManager::GetInstance()) {
+  DependsOn(OfflinePageModelFactory::GetInstance());
+}
 
 // static
 RequestCoordinatorFactory* RequestCoordinatorFactory::GetInstance() {
